Fix a placeholder layout bug in a case of nested flexible boxes and relative/absolute positions.
Whenever innerTextRenderer needs layout, a placeholder renderer should be laid out too.

BUG=361014, 362892
TEST=automated
R=esprehn, pfeldman

Review URL: https://codereview.chromium.org/242973005

git-svn-id: svn://svn.chromium.org/blink/trunk@172026 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/elementsPanel.css
+++ b/front_end/elementsPanel.css
@@ -618,7 +618,6 @@
     outline: none !important;
     border: none;
     width: 100%;
-    height: 18px; /* FIXME: A http://crbug.com/361014 workaround to make the placeholder visible. */
     margin: 0 4px;
     background: transparent;
 }
